Fixes the issues with alignment in homepage in the homepage

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,21 +46,13 @@ h2 {
   color: #777;
 }
 
-.container-fluid.bg-3.text-center{
+.container.bg-3{
   padding-top: 2%;
 }
-
-
 
 .container{
   padding-left: 60px;
 }
-
-.container-fluid.bg-3
-{
-  padding-top: 2%;
-}
-
 
 .container.home
 {
@@ -72,4 +64,5 @@ h2 {
 {
   padding-top: 4%;
   padding-bottom: 3%;
+  padding-left: 0%;
 }
